Added Facebook. As well as some of Dhruv's code. Working on updating Location File now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FourSquareOfficial</string>
+    <string name="facebook_app_id">618114188363722</string>
+    <string name="fb_login_protocol_scheme">fb618114188363722</string>
 </resources>
